--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
         "query-string": "^6.10.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-emoji": "^0.5.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.0",
         "react-scroll-to-bottom": "^1.3.2",
